Merged revisions 7617-7621,7625,7627-7628,7630-7633,7635,7638-7643,7646-7647,7649-7652,7657,7661-7662 via svnmerge from https://svn.codehaus.org/mule/trunk/mule
........
  r7617 | acooke | 2007-07-20 16:22:14 -0400 (Fri, 20 Jul 2007) | 1 line
  
  MULE-2050: This seems to work; tests will need updating in 2.0, as will config, so I will not close issue.
........
  r7619 | acooke | 2007-07-20 16:50:11 -0400 (Fri, 20 Jul 2007) | 1 line
  
  MULE-2050: Changed to backupEnabled.
........
  r7638 | acooke | 2007-07-24 10:00:04 -0400 (Tue, 24 Jul 2007) | 3 lines
  
  Some experimental code looking at the "address already in use" problem.  It's a test, but excluded from running (it fails with "Address already in use").  I am going to return to this and look at how setting SO_LINGER might help.
  
  There's also a simple benchmark added to TcpFunctionalTestCase that isn't run in normal use.  That's what I used to measure the overhead for message copying.
........
  r7640 | acooke | 2007-07-24 12:28:26 -0400 (Tue, 24 Jul 2007) | 1 line
  
  MULE-2067: A bit more exploration.  Don't think there's much more to learn from this.
........
  r7641 | acooke | 2007-07-24 15:22:33 -0400 (Tue, 24 Jul 2007) | 1 line
  
  MULE-2067: Yet more exploration.  Still very confused.
........
  r7642 | acooke | 2007-07-24 15:46:26 -0400 (Tue, 24 Jul 2007) | 1 line
  
  MULE-2067: Yet more exploration - reusing addresses might be worth trying.
........
  r7643 | acooke | 2007-07-24 17:15:55 -0400 (Tue, 24 Jul 2007) | 1 line
  
  MULE-2069: Added ability to set reuse of addresses.  The Java spec does not define a default value, so for 1.4 the implementation respects that.  For 2.0 I would like to try setting the default to "true" - this may help with "address already bound" errors.
........
  r7646 | acooke | 2007-07-25 09:18:40 -0400 (Wed, 25 Jul 2007) | 1 line
  
  MULE-2069: Need to set reuse before binding.
........
  r7647 | acooke | 2007-07-25 10:17:56 -0400 (Wed, 25 Jul 2007) | 1 line
  
  